welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: illegal character '\u00a7'
	return (aSmile || §bSmile)
                          ^